--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -17,5 +17,6 @@
     <body>
         <h1>cats</h1>
         <img style="-webkit-user-select: none" src="http://placekitten.com/g/200/400">
+        <img style="-webkit-user-select: none" src="images/img/twitter.png">
     </body>
 </html>
