--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -1,18 +1,69 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>jQuery Mobile Application</title>
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
-        <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+	    <title>jQuery Mobile Application</title>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
+        <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
     </head>
     <body>
-        <section id="page1" data-role="page" data-theme="a">
-            <header data-role="header" data-position="fixed"><h1>jQuery Mobile</h1></header>
-            <div class="content" data-role="content">
-                <p>first page</p>
-            </div>
-            <footer data-role="footer" data-position="fixed"><h1>cresswell</h1></footer>
-        </section>
+        <div data-role="page" id="jqm-home" class="type-home"> 
+            <div data-role="content"> 
+                <div class="content-secondary"> 
+                    <div id="jqm-homeheader"> 
+                        <h1 id="jqm-logo"><img src="docs/_assets/images/jquery-logo.png" alt="jQuery Mobile Framework" /></h1> 
+                        <p>A Touch-Optimized Web Framework for Smartphones &amp; Tablets</p> 
+                        <p id="jqm-version">Beta Release</p> 
+                    </div> 
+
+
+            <p class="intro"><strong>Welcome.</strong> Browse the jQuery Mobile components and learn how to make rich, accessible, touch-friendly websites and apps.</p> 
+
+            <ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f"> 
+                <li data-role="list-divider">Overview</li> 
+                <li><a href="docs/about/intro.html">Intro to jQuery Mobile</a></li> 
+                <li><a href="docs/about/features.html">Features</a></li> 
+                <li><a href="docs/about/accessibility.html">Accessibility</a></li> 
+                <li><a href="docs/about/platforms.html">Supported platforms</a></li> 
+            </ul> 
+
+        </div><!--/content-primary-->   
+
+        <div class="content-primary"> 
+            <nav> 
+
+
+                <ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="b"> 
+                    <li data-role="list-divider">Components</li> 
+                    <li><a href="docs/pages/index.html">Pages &amp; dialogs</a></li> 
+                    <li><a href="docs/toolbars/index.html">Toolbars</a></li> 
+                    <li><a href="docs/buttons/index.html">Buttons</a></li> 
+                    <li><a href="docs/content/index.html">Content formatting</a></li> 
+                    <li><a href="docs/forms/index.html">Form elements</a></li> 
+                    <li><a href="docs/lists/index.html">List views</a></li> 
+
+                    <li data-role="list-divider">API</li> 
+                    <li><a href="docs/api/globalconfig.html">Configuring defaults</a></li> 
+                    <li><a href="docs/api/events.html">Events</a></li> 
+                    <li><a href="docs/api/methods.html">Methods &amp; Utilities</a></li> 
+                    <li><a href="docs/api/mediahelpers.html">Responsive Layout</a></li> 
+                    <li><a href="docs/api/themes.html">Theme framework</a></li> 
+
+
+                </ul> 
+            </nav> 
+        </div> 
+
+
+
+    </div> 
+
+    <div data-role="footer" class="footer-docs" data-theme="c"> 
+            <p>&copy; 2011 The jQuery Project</p> 
+    </div>  
+
+</div>     
     </body>
 </html>
