--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,11 @@
 
         <style type="text/css">
 
+body {
+    background:url("images/architecture.jpg") no-repeat;
+    background-position-x: 100%;
+}
+
 div.cornerDiv{
     display: block;
     position: absolute;
