--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,7 @@
         <style type="text/css">
 
 body {
-    background:url("images/architecture.jpg") no-repeat;
-    background-position-x: 100%;
+    background:url("images/tiles/tile-diagonal-hazard-stripes.jpg") repeat;
 }
 
 div.cornerDiv{
