--- a/views/jayhome.html
+++ b/views/jayhome.html
@@ -6,7 +6,7 @@
         <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.15/jquery-ui.min.js" type="text/javascript"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" type="text/javascript"></script>
-        <script src="http://cloud.github.com/downloads/SteveSanderson/knockout/knockout-1.1.2.js"></script>
+        <script src="http://cloud.github.com/downloads/SteveSanderson/knockout/knockout-1.2.1.js"></script>
         <script src="../javascripts/jquery-knockout-select-plugin.js" type="text/javascript"></script>
         <style type="text/css">
 
@@ -14,24 +14,107 @@
         <!-- https://github.com/kof/node-jqtpl -->
     </head>
     <body>
-        <h1>${locals.title}</h1>
-        <p><span data-bind="text: title"></span></p>
+        <h1>{{= locals.title }}</h1>
+        
+        <div id="add-dialog">
+            <form>
+                <p>Title: <span><input id="newTitle" /></span></p>
+            </form>
+        </div>
+        
+        <div id="list-form">
+            <p>Title: <span data-bind="text: title"></span></p>
+            <button id="addButton" data-bind="click: add">Add</button>
+            <button data-bind="click: load">Refresh</button>
+            <p>Jays (<span data-bind="text: jays().length"></span>)</p>
+            <ul data-bind="template: { name: 'itemTemplate', foreach: jays}"></ul>
+        </div>
     </body>    
     
+    <script id="itemTemplate" type="text/html">
+        <li>${ $data.title }</li>
+    </script>
+    
     <script type='text/javascript'>
+    
+        /* model constructors */
+        function jay( _id, _title){
+            return {
+              id: ko.observable(_id),
+              title: ko.observable(_title)
+            };
+        }
     
         /* Knockout.js View Models */
     
         var viewModel = {
-            title: ko.observable('Jayson')
+            title: ko.observable('Jayson'),
+            jays: ko.observableArray(),
+            load: function () {
+                $.getJSON('/jayson/all', function (result) {
+                    viewModel.jays.removeAll();
+                    if (result.success) {
+                        $.each(result.data, function (index, item) {
+                            viewModel.jays.push(new jay(item._id, item.title));
+                        });
+                    }
+                });
+            },
+            add: function () {
+                newViewModel.title('');
+                newViewModel.body(''),
+                $("#add-dialog").dialog("open");
+                $("#newTitle").focus();
+            }
+        };
+                
+        var newViewModel = {
+            title: ko.observable(''),
+            body: ko.observable(''),
+            save: function () {
+                var data = { title: "test" };
+                $.post('/jayson/new', function(result) {
+                    if (result.success) {
+                        $("#add-dialog").dialog("close");
+                        viewModel.load();
+                    } else {
+                        alert(result.message);
+                    }
+                });
+                
+            }
         };
         
-        ko.applyBindings(viewModel);        
+        ko.applyBindings(viewModel, document.getElementById("list-form")); 
+        ko.applyBindings(newViewModel, document.getElementById("add-dialog"));
         
-        $( function () {
+        /* jQuery UI */
+        
+        $(function () {
            
-           alert('hi');
+           viewModel.load();
            
+           $("button").button();
+           
+           $("#add-dialog").dialog({
+                autoOpen: false,
+                modal: true,
+                width: 400,
+                height: 300,
+                title: "add a jay",
+                close: function () {
+                    
+                },
+                buttons: {
+                    'Save': function () {
+                        newViewModel.save();
+                    },
+                    Cancel: function () {
+                        $(this).dialog("close");
+                    }
+                }
+            });
+            
         });
     
     </script>
