--- a/views/layout.html
+++ b/views/layout.html
@@ -3,152 +3,30 @@
     <head>
         <title>crezworld.</title>
         <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.css">
+        <link rel="stylesheet" href="../stylesheets/crezworld.css">
+        <link href='http://fonts.googleapis.com/css?family=Terminal+Dosis' rel='stylesheet' type='text/css'>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script src="../javascripts/bootstrap-modal.js" type="text/javascript"></script>
-        <style type="text/css">
-            body {
-                padding-top: 60px;
-            }
-            
-            DIV.topbar-inner {
-                height: 40px;  
-                padding-left:20px;
-            }
-        </style>
+        <script src="../javascripts/bootstrap-modal.js" type="text/javascript"></script>        
     </head>
     <body>
         <div class="topbar">
             <div class="topbar-inner">
                 <div class="fluid-container">
-                    <a class="brand" href="#">gregcswanson</a>
-                    <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">people</a></li>
-                        <li><a href="#">settings</a></li>
-                    </ul>
-                    <form action="">
-                        <input type="text" placeholder="Search">
-                    </form>
-                    <p class="pull-right">Logged in as <a href="#">username</a></p>
+                    <a class="brand" href="#">crezworld.</a>
+                    <div class="container">
+                        <ul class="nav">
+                            <li {{ if (locals.page === 'home') { }}
+                                class="active"
+                                {{ } }}
+                                ><a href="/">Home</a></li>
+                            <li {{ if (locals.page === 'vegasreunion') { }}
+                                class="active"
+                                {{ } }}><a href="/vegasreunion">Vegas Re-union</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
-      <div class="sidebar">
-        <div class="well">
-            <a class="btn success small" data-controls-modal="modal-from-dom" data-backdrop="static" >Launch Modal</a>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="content">
-          <h1>Project: PROJ0001 Grand View Reconstruction</h1>
-            <div class="alert-message info">
-                <a class="close" href="#">×</a>
-                <p><strong>Info!</strong> something</p>
-            </div>
-          <ul class="tabs">
-                <li class="active"><a href="#">General</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Sub Projects</a></li>
-                <li><a href="#">Budget</a></li>
-                <li><a href="#">Attributes</a></li>
-            </ul>
-        <div class="hero-unit">
-            <ul class="pills">
-                <li class="active"><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-            </ul>
-        </div>
-        <blockquote>
-            <p><span class="label warning">Warning</span> this grand design is over budget...</p>
-            <small>P. M.</small>
-        </blockquote>
-      </div>
-      <div class="content">
-        <!-- Main hero unit for a primary marketing message or call to action -->
-        <div class="hero-unit">
-          <h1>Hello, world!</h1>
-          <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn primary large">Learn more »</a></p>
-        </div>
-
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="span6">
-            <h2>Heading</h2>
-            <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-            <p><a class="btn" href="#">View details »</a></p>
-          </div>
-          <div class="span5">
-            <h2>Heading</h2>
-             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details »</a></p>
-         </div>
-          <div class="span5">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn" href="#">View details »</a></p>
-          </div>
-        </div>
-
-        <hr>
-
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="span6">
-            <h2>Heading</h2>
-            <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-            <p><a class="btn" href="#">View details »</a></p>
-          </div>
-          <div class="span5">
-            <h2>Heading</h2>
-             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details »</a></p>
-         </div>
-          <div class="span5">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn" href="#">View details »</a></p>
-          </div>
-        </div>
-
-        <footer>
-          <p>© Company 2011</p>
-        </footer>
-      </div>
-    </div>
-    <div id="modal-from-dom" class="modal hide fade" style="display: none; ">
-            <div class="modal-header">
-              <a href="#" class="close">×</a>
-              <h3>Modal Heading</h3>
-            </div>
-            <div class="modal-body">
-              <p>One fine body…</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#" class="btn primary">Primary</a>
-              <a href="#" class="btn secondary">Secondary</a>
-            </div>
-          </div>
+        {{- body}}
     </body>
 </html>
