--- a/views/vegasreunion.html
+++ b/views/vegasreunion.html
@@ -1,5 +1,7 @@
 <div class="container">
     <div class="hero-unit">
         <h2>Vegas Re-union in...</h2>
+        <div id="jsCount"></div>
     </div>
 </div>
+<script src="../javascripts/unc-jsCount.js" type="text/javascript"></script>
