--- a/views/vegasreunion.html
+++ b/views/vegasreunion.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="hero-unit">
         <h2>Vegas Re-union in...</h2>
-        <div id="jsCount"></div>
+        <div class="counter-container">
+            <div id="jsCount"></div>
+        </div>
     </div>
 </div>
 <script src="../javascripts/unc-jsCount.js" type="text/javascript"></script>
