--- a/views/layout.html
+++ b/views/layout.html
@@ -5,8 +5,10 @@
         <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.css">
         <link rel="stylesheet" href="../stylesheets/crezworld.css">
         <link href='http://fonts.googleapis.com/css?family=Terminal+Dosis' rel='stylesheet' type='text/css'>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script src="../javascripts/bootstrap-modal.js" type="text/javascript"></script>        
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="../javascripts/bootstrap-modal.js" type="text/javascript"></script>       
+        <script src="../javascripts/knockout-2.0.0.js" type="text/javascript"></script>      
+        <script src="../javascripts/amplify.min.js" type="text/javascript"></script>       
     </head>
     <body>
         <div class="topbar">
