--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,4 +84,9 @@ h1{
     background: gray;
 }
 
+.footer-large-desktop, .footer-desktop, .footer-tablet, .footer-phone
+{
+    display: none;
+}
+
 
