--- a/views/wall.html
+++ b/views/wall.html
@@ -63,6 +63,16 @@
                     <li data-bind="text: name, click: $root.selectLevel4"></li>
                 </ul>
             </div>
+            <div class="span4">
+                <ul class="unstyled" data-bind="foreach: level4s">
+                    <li data-bind="text: name, click: $root.selectLevel4"></li>
+                </ul>
+            </div>
+            <div class="span4">
+                <ul class="unstyled" data-bind="foreach: level4s">
+                    <li data-bind="text: name, click: $root.selectLevel4"></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
