--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,8 @@
         <script src="../javascripts/bootstrap-modal.js" type="text/javascript"></script>       
         <script src="../javascripts/knockout-2.0.0.js" type="text/javascript"></script>        
         <script src="../javascripts/knockout.custom.js" type="text/javascript"></script>      
-        <script src="../javascripts/amplify.min.js" type="text/javascript"></script>       
+        <script src="../javascripts/amplify.min.js" type="text/javascript"></script>           
+        <script src="../javascripts/sammy.js" type="text/javascript"></script>    
     </head>
     <body>
         <div class="topbar">
@@ -38,6 +39,8 @@
             <div class="footer-large-desktop"><p>-Large Desktop Media Query-</p></div>
             <div class="footer-desktop"><p>-Desktop Media Query-</p></div>
             <div class="footer-tablet"><p>-Tablet Media Query-</p></div>
+            <div class="footer-tablet-ipad-landscape"><p>-iPad Landscape Media Query-</p></div>
+            <div class="footer-tablet-ipad-portrait"><p>-iPad Portrait Media Query-</p></div>
             <div class="footer-phone"><p>-Phone Media Query-</p></div>
         </div>
     </body>
