--- a/views/wall.html
+++ b/views/wall.html
@@ -1,26 +1,13 @@
 <div id="wallposts" class="container">
-    <div class="hero-unit">
-        <h2>Wall</h2>
-        <p>What database? This is in memory storage so say good by to your precious data</p>
-        <!-- <div>
-            <p>listing</p>
-            <button class="btn" data-bind="click: refresh">all</button>
-            <button class="btn" data-bind="click: get">get</button>
-            <button class="btn" data-bind="click: update">update</button>
-            <button class="btn" data-bind="click: del">delete</button>
-            <p>message: <span data-bind="text: message"></span></p>
-            <p>data: <span data-bind="text: data"></span></p>
+     <div id="main" class="container">
+        <div id="main-index" class="hero-unit">
+            <h2>Wall</h2>
+            <p>What database? This is in memory storage so say good by to your precious data</p>
         </div>
-        <div>
-            <form id="add-form" data-bind="submitWithValidate: insert">
-                
-                    <label for="title">Title</title>
-                    <input name="title" data-bind="value: newTitle" placeholder="Title" class="required" />
-                    <label for="post">Post</label>
-                    <input name="post" data-bind="value: newPost" placeholder="Post something" class="required" />
-                    <button class="btn" type="submit">Add</button>
-            </form>
-        </div> -->
+        <div id="main-page2" class="hero-unit" style="display:none;">
+            <h2>Page 2</h2>
+            <p>Sammy Works</p>
+        </div>
     </div>
     <div class="container">
         <div>
@@ -294,5 +281,28 @@
     ko.applyBindings(new WallPostViewModel(), document.getElementById('wallposts'));
     
     // jQuery
+    (function($) {
+      
+        var sammyApp = $.sammy(function() {
+            this.element_selector = '#main';
+            
+            this.get('#/', function(context) {
+                $("#main-index").show();
+                $("#main-page2").hide();
+            });
+            
+            this.get('#/page2', function(context) {
+                $("#main-index").hide();
+                $("#main-page2").show();
+            });
+            
+        });
+        
+        $(function() {
+          sammyApp.run('#/');
+        });
+      
+      })(jQuery);
+    
     
 </script>
