--- a/views/layout.html
+++ b/views/layout.html
@@ -29,6 +29,9 @@
                             <li {{ if (locals.page === 'vegasreunion') { }}
                                 class="active"
                                 {{ } }}><a href="/vegasreunion">Vegas Re-union</a></li>
+                            <li {{ if (locals.page === 'app') { }}
+                                class="active"
+                                {{ } }}><a href="/app">App</a></li>
                         </ul>
                     </div>
                 </div>
