--- a/views/layout.html
+++ b/views/layout.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         {{- body}}
-        <div class="container">
+        <div class="container" style="text-align:center;margin-top:100px;">
             <div class="footer-large-desktop"><p>-Large Desktop Media Query-</p></div>
             <div class="footer-desktop"><p>-Desktop Media Query-</p></div>
             <div class="footer-tablet"><p>-Tablet Media Query-</p></div>
