--- a/public/stylesheets/crezworld.css
+++ b/public/stylesheets/crezworld.css
@@ -1,6 +1,7 @@
 body {
     padding-top: 60px;
-    font-family: 'Terminal Dosis', sans-serif;
+    fdont-family: "Segoe UI", "Segoe WP", "Helvetica Neue", Roboto, sans-serif;
+    font-family: sans-serif;
 }
             
 DIV.topbar-inner {
