--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 14px "Segoe UI", "Segoe WP", "Helvetica Neue", Roboto, sans-serif;
 }
 
 a{
